@@ -1,7 +1,12 @@
 package com.example.mockstalk.domain.price.periodic_candles.service;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.redis.core.RedisTemplate;
@@ -10,6 +15,7 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
 
@@ -19,8 +25,6 @@ import com.example.mockstalk.domain.price.periodic_candles.entity.PeriodicCandle
 import com.example.mockstalk.domain.price.periodic_candles.entity.PeriodicCandles;
 import com.example.mockstalk.domain.price.periodic_candles.repository.PeriodicCandleRepository;
 import com.example.mockstalk.domain.stock.entity.Stock;
-import com.example.mockstalk.domain.stock.repository.StockRepository;
-import com.fasterxml.jackson.databind.ObjectMapper;
 
 import lombok.RequiredArgsConstructor;
 
@@ -30,7 +34,6 @@ public class PeriodicCandleApiService {
 
 	private final RestTemplate restTemplate;
 	private final PeriodicCandleRepository candleRepository;
-	private final StockRepository stockRepository;
 	private final RedisTemplate<String, Object> redisTemplate;
 
 	@Value("${hantu-openapi.appkey}")
@@ -42,6 +45,7 @@ public class PeriodicCandleApiService {
 	@Value("${hantu-openapi.domain}")
 	private String baseUrl;
 
+	@Transactional
 	public void fetchAndSaveCandles(Stock stock, String candleType,
 		String startDate,
 		String endDate) {
@@ -63,7 +67,7 @@ public class PeriodicCandleApiService {
 		}
 
 		HttpHeaders headers = new HttpHeaders();
-		headers.set("authorization", "Bearer " + accessToken);
+		headers.set("authorization", accessToken);
 		headers.set("tr_id", "FHKST03010100");
 		headers.set("appKey", appKey);
 		headers.set("appSecret", appSecret);
@@ -85,16 +89,42 @@ public class PeriodicCandleApiService {
 			Map.class
 		);
 
-		List<Map<String, Object>> outputs = (List<Map<String, Object>>)response.getBody()
-			.get("output");
+		List<Map<String, Object>> output2 = (List<Map<String, Object>>)response.getBody()
+			.get("output2");
 
-		ObjectMapper mapper = new ObjectMapper();
-		List<PeriodicCandleApiResponseDto> dtoList = outputs.stream()
-			.map(data -> mapper.convertValue(data, PeriodicCandleApiResponseDto.class))
+		List<PeriodicCandleApiResponseDto> dtoList = output2.stream()
+			.map(data -> new PeriodicCandleApiResponseDto(
+				(String)data.get("stck_bsop_date"),
+				String.valueOf(data.get("stck_oprc")),
+				String.valueOf(data.get("stck_clpr")),
+				String.valueOf(data.get("stck_hgpr")),
+				String.valueOf(data.get("stck_lwpr")),
+				String.valueOf(data.get("acml_vol"))
+			))
 			.toList();
 
+		Set<LocalDateTime> apiDates = dtoList.stream()
+			.map(dto -> LocalDate.parse(dto.getStck_bsop_date(), DateTimeFormatter.BASIC_ISO_DATE)
+				.atStartOfDay())
+			.collect(Collectors.toSet());
+
+		List<PeriodicCandles> existingCandles = candleRepository
+			.findByStockAndCandleTypeAndDateIn(stock, PeriodicCandleType.valueOf(candleType),
+				apiDates);
+
+		Set<LocalDateTime> existingDates = existingCandles.stream()
+			.map(PeriodicCandles::getDate)
+			.collect(Collectors.toSet());
+
 		List<PeriodicCandles> entityList = dtoList.stream()
-			.map(dto -> dto.toEntity(PeriodicCandleType.valueOf(candleType), stock)).toList();
+			.filter(dto -> {
+				LocalDateTime dateTime = LocalDate.parse(dto.getStck_bsop_date(),
+						DateTimeFormatter.BASIC_ISO_DATE)
+					.atStartOfDay();
+				return !existingDates.contains(dateTime);
+			})
+			.map(dto -> dto.toEntity(PeriodicCandleType.valueOf(candleType), stock))
+			.collect(Collectors.toList());
 
 		candleRepository.saveAll(entityList);
 	}
